testdata/baselines/reference/compiler/intrinsicDepsErrors.errors.txt
intrinsicDepsErrors.ts(4,11): error TS95202: Intrinsic type runtime error: undefined function 'mutableHelper'
intrinsicDepsErrors.ts(14,35): error TS2304: Cannot find name 'ghostFn'.
intrinsicDepsErrors.ts(15,11): error TS95202: Intrinsic type runtime error: undefined function 'ghostFn'
intrinsicDepsErrors.ts(20,11): error TS95202: Intrinsic type runtime error: undefined function 'varHelper'


==== intrinsicDepsErrors.ts (4 errors) ====
    // let declaration: not extracted
    let mutableHelper = (n: number) => n + 1;
    const usesMutable = (x: number) => mutableHelper(x);
    type E1 = Intrinsic<typeof usesMutable, [5]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95202: Intrinsic type runtime error: undefined function 'mutableHelper'
    
    // Inner function: works via DSL's own let handling
    const outerFn = (x: number) => {
        let innerHelper = (n: number) => n * 2;
        return innerHelper(x);
    };
    type E2 = Intrinsic<typeof outerFn, [5]>;  // 10
    
    // Undefined reference
    const callsGhost = (x: number) => ghostFn(x);
                                      ~~~~~~~
!!! error TS2304: Cannot find name 'ghostFn'.
    type E3 = Intrinsic<typeof callsGhost, [5]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95202: Intrinsic type runtime error: undefined function 'ghostFn'
    
    // var declaration: not extracted
    var varHelper = (n: number) => n + 1;
    const usesVar = (x: number) => varHelper(x);
    type E4 = Intrinsic<typeof usesVar, [5]>;
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS95202: Intrinsic type runtime error: undefined function 'varHelper'
    
    // Const value dependency
    const NUM_VALUE = 42;
    const usesNum = (x: number) => x + NUM_VALUE;
    type E5 = Intrinsic<typeof usesNum, [8]>;  // 50
    
    // Const expression dependency
    const computed = 2 + 3;
    const usesComputed = (x: number) => x + computed;
    type E6 = Intrinsic<typeof usesComputed, [10]>;  // 15
    
    // Division is not confused with comments
    const divides = (a: number, b: number) => a / b;
    type E7 = Intrinsic<typeof divides, [10, 2]>;  // 5
    